# ChangeLog for virtual/perl-Term-ANSIColor
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Term-ANSIColor/ChangeLog,v 1.5 2009/03/01 12:52:57 tove Exp $

*perl-Term-ANSIColor-2.00 (01 Mar 2009)

  01 Mar 2009; Torsten Veller <tove@gentoo.org>
  +perl-Term-ANSIColor-2.00.ebuild:
  Version bump

  18 Nov 2008; Torsten Veller <tove@gentoo.org>
  perl-Term-ANSIColor-1.12.ebuild:
  Clean up KEYWORDS

  02 Nov 2008; Torsten Veller <tove@gentoo.org>
  -perl-Term-ANSIColor-1.11.ebuild, perl-Term-ANSIColor-1.12.ebuild:
  Change dependencies and KEYWORDS for perl-core/Term-ANSIColor-1.12. Remove
  perl-Term-ANSIColor-1.11.

*perl-Term-ANSIColor-1.12 (01 Nov 2008)
*perl-Term-ANSIColor-1.11 (01 Nov 2008)

  01 Nov 2008; Yuval Yaari <yuval@gentoo.org> +metadata.xml,
  +perl-Term-ANSIColor-1.11.ebuild, +perl-Term-ANSIColor-1.12.ebuild:
  Adding virtuals for dual-lifed modules that come with perl-5.10
