@@ -1,4 +1,5 @@
 EBUILD perl-Term-ANSIColor-1.12.ebuild 577 RMD160 2385f6472af8696eeca973e48f1b75873a05fe89 SHA1 a6e7c1e3c3cf3b4dfbdd7df29aa2c308151508a4 SHA256 e8053a8041caa07b92069d8f41ed02967ff7df950f2108fda7cfd6a4b2eae025
 EBUILD perl-Term-ANSIColor-2.00.ebuild 577 RMD160 dbf996429a1b95fa721c7a73f2dd4ab3fb7fa0b1 SHA1 e1a37cd268a78a94f89856f8ee0a260487024ea2 SHA256 a42f74e5ef1b6305790a6adde5cd11ffa14a076c7e9c69c115e329879931b377
-MISC ChangeLog 972 RMD160 e766053b6d672a8883688fd5c34d0bdbee29f059 SHA1 712e63490b9388b02fdab31c744cedf1fe12dfa7 SHA256 e8ee44e9739c7c7c9d505f9cfdd999c0c4adcb42d4dcb6cd8b6e294fd77f36ea
+EBUILD perl-Term-ANSIColor-2.01.ebuild 577 RMD160 8fb55e11517e30df8a2b6535ba7c39cf30236cb5 SHA1 2aed65145a3e31d8b7c7d7c22c4c771f064ba7a3 SHA256 54d6b47e6715aa42a1308933d79ee561d88095c66442f8d4bb6f70bdcc28356a
+MISC ChangeLog 1113 RMD160 af22e16bee83c54820312b48094639887427ed8a SHA1 f7d7d45f5c8d9a2a70140cceee23810a16c758b0 SHA256 6bc469e3ca3bb2d2287389b9ccdf2cd1326772f1c5bc060ccf9c6e190ae2ac44
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
