@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-Term-ANSIColor
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Term-ANSIColor/ChangeLog,v 1.5 2009/03/01 12:52:57 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Term-ANSIColor/ChangeLog,v 1.6 2009/07/05 12:52:34 tove Exp $
+
+*perl-Term-ANSIColor-2.01 (05 Jul 2009)
+
+  05 Jul 2009; Torsten Veller <tove@gentoo.org>
+  +perl-Term-ANSIColor-2.01.ebuild:
+  Version bump
 
 *perl-Term-ANSIColor-2.00 (01 Mar 2009)
 
